[tool.poetry]
name = "joplin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django-coverage-plugin = "^1.8.0"
django-dbbackup = "~3.2.0"
pytest-cov = "^2.9.0"
boto3 = "~1.9.94"
django-cors-headers = "~2.2"
phonenumberslite = "~8.10.16"
gunicorn = "^20.0.4"
wagtail-react-streamfield = "^1.3.5"
django-session-security = "~2.6.5"
django-modeltranslation = "~0.13.1"
heroku3 = "~3.3"
django-filter = "~2.1"
pytest-factoryboy = "^2.0.3"
snapshottest = "^0.5.1"
django-smuggler = "~0.9.1"
django-phonenumber-field = "~3.0.1"
wagtail-factories = "~2.0.0"
django-flags = "^4.2.4"
pyhumps = "^1.3.1"
coa-wagtail-modeltranslation = "~0.10.6"
scout-apm = "~2.11.0"
django-postgrespool2 = "^1.0.1"
django-storages = "~1.6.6"
django-extensions = "~2.1.9"
wagtail = "~2.8"
pympler = "^0.8"
coverage = "^5.1"
django-redis-cache = "~2.1.1"
pytest-django = "^3.9.0"
l18n = "^2018.5"
gql = "~2.0.0"
django-webpack-loader = "~0.6"
django-debug-toolbar = "~2.0"
django-silk = "^4.0.1"
coa-django-countable_field = "~1.6"
gevent = "^20.5.0"
greenlet = "^0.4.15"
psycopg2 = "~2.8.4"
pytest-pythonpath = "^0.7.3"
psycogreen = "^1.0.2"
dj-database-url = "~0.5.0"
wagtail-grapple = {git = "https://github.com/briaguya/wagtail-grapple.git"}
django-graphql-jwt = "^0.3.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
